--- a/src/pages/Person.css
+++ b/src/pages/Person.css
@@ -1,5 +1,19 @@
-.character-info{
-    display: block;
-    margin-left: auto;
-    margin-right: auto 
+h1 {
+    text-align: center;
+}
+
+.character-info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.line {
+    opacity: 0.2;
+}
+
+.starship {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
