Mudando estrutura de pasta e alterando layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  color:black;
-  background-color: #f8f8f8;
+  color:#DDDEDA;
+  background-image: url("./assets/images/starsbackground.jpg");
   min-height: 100vh;
 }
 
